# ezyfox-server-cpp-client

./: .gitignore  CMakeLists.txt  CODING_CONVENSION.md  CODING_CONVENSIONS.md  README.md
example/: CMakeLists.txt  main.cpp
ezyfox-client.xcworkspace/: contents.xcworkspacedata
ezyfox-client.xcworkspace/xcuserdata/tavandung.xcuserdatad/: UserInterfaceState.xcuserstate
platform/android/: .gitignore  build.gradle  gradle.properties
platform/android/jni/: Android.mk  Application.mk
platform/android/src/main/: AndroidManifest.xml
platform/apple/: Podfile
platform/apple/ezyfox-client.xcodeproj/: project.pbxproj
src/: EzyClient.cpp  EzyClient.h  EzyClients.cpp  EzyClients.h  EzyHeaders.h  EzyMacro.h  EzyUTClient.cpp  EzyUTClient.h  main.cpp
src/base/: EzyRef.cpp  EzyRef.h
src/codec/: EzyDataDecoder.cpp  EzyDataDecoder.h  EzyDataEncoder.cpp  EzyDataEncoder.h  EzyEncryption.cpp  EzyEncryption.h  EzyMessage.cpp  EzyMessage.h
src/command/: EzySetup.cpp  EzySetup.h
src/concurrent/: EzyScheduleAtFixedRate.cpp  EzyScheduleAtFixedRate.h  EzyThread.cpp  EzyThread.h
src/config/: EzyClientConfig.cpp  EzyClientConfig.h
src/constant/: EzyCommand.cpp  EzyCommand.h  EzyConnectionFailedReason.cpp  EzyConnectionFailedReason.h  EzyConnectionStatus.cpp  EzyConnectionStatus.h  EzyDisconnectReason.cpp  EzyDisconnectReason.h  EzyStatusCode.h  EzyTransportType.h
src/entity/: EzyApp.cpp  EzyApp.h  EzyArray.cpp  EzyArray.h  EzyByteArray.cpp  EzyByteArray.h  EzyJson.cpp  EzyJson.h  EzyNull.cpp  EzyNull.h  EzyObject.cpp  EzyObject.h  EzyPlugin.cpp  EzyPlugin.h  EzyPrimitive.cpp  EzyPrimitive.h  EzyRef.cpp  EzyRef.h  EzyString.cpp  EzyString.h  EzyUser.cpp  EzyUser.h  EzyValue.cpp  EzyValue.h  EzyZone.cpp  EzyZone.h
src/event/: EzyEvent.cpp  EzyEvent.h  EzyEventType.cpp  EzyEventType.h
src/gc/: EzyAutoReleasePool.cpp  EzyAutoReleasePool.h  EzyReleasePool.cpp  EzyReleasePool.h
src/handler/: EzyAppDataHandler.cpp  EzyAppDataHandler.h  EzyAppDataHandlers.cpp  EzyAppDataHandlers.h  EzyDataHandler.cpp  EzyDataHandler.h  EzyDataHandlers.cpp  EzyDataHandlers.h  EzyEventHandler.cpp  EzyEventHandler.h  EzyEventHandlers.cpp  EzyEventHandlers.h  EzyPingSchedule.cpp  EzyPingSchedule.h  EzyPluginDataHandler.cpp  EzyPluginDataHandler.h  EzyPluginDataHandlers.cpp  EzyPluginDataHandlers.h
src/io/: EzyArrayDataDeserializable.h  EzyArrayDataSerializable.h  EzyDataDeserializable.h  EzyDataSerializable.h
src/json/: json.hpp
src/logger/: EzyLogger.cpp  EzyLogger.h
src/manager/: EzyAppManager.cpp  EzyAppManager.h  EzyHandlerManager.cpp  EzyHandlerManager.h  EzyPingManager.cpp  EzyPingManager.h  EzyPluginManager.cpp  EzyPluginManager.h
src/pool/: EzyAutoReleasePool.cpp  EzyAutoReleasePool.h  EzyReleasePool.cpp  EzyReleasePool.h
src/request/: EzyArrayRequestSerializer.cpp  EzyArrayRequestSerializer.h  EzyRequest.cpp  EzyRequest.h  EzyRequestDeliver.h  EzyRequestSerializer.cpp  EzyRequestSerializer.h
src/security/: EzySocketKeyPair.cpp  EzySocketKeyPair.h
src/setup/: EzySetup.cpp  EzySetup.h
src/socket/: EzyMainEventsLoop.cpp  EzyMainEventsLoop.h  EzyPingSchedule.cpp  EzyPingSchedule.h  EzySender.h  EzySocketAdapter.cpp  EzySocketAdapter.h  EzySocketClient.cpp  EzySocketClient.h  EzySocketCore.cpp  EzySocketCore.h  EzySocketDefine.h  EzySocketDelegate.h  EzySocketKeyPair.cpp  EzySocketKeyPair.h  EzySocketPool.cpp  EzySocketPool.h  EzySocketReader.cpp  EzySocketReader.h  EzySocketTcpClient.cpp  EzySocketTcpClient.h  EzySocketWriter.cpp  EzySocketWriter.h  EzyTcpSocketClient.cpp  EzyTcpSocketClient.h  EzyUTSocketClient.cpp  EzyUTSocketClient.h  EzyUdpSocketClient.cpp  EzyUdpSocketClient.h
src/util/: EzyMaps.h  EzyStack.h  EzyValueStack.h
